--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,10 @@
 [submodule "lib/minizip-ng"]
 	path = lib/minizip-ng
 	url = https://github.com/zlib-ng/minizip-ng.git
+[submodule "external/JUCE"]
+    path = external/JUCE
+    url = https://github.com/juce-framework/JUCE.git
+[submodule "external/juicysfplugin"]
+    path = external/juicysfplugin
+    url = https://github.com/mikelow/juicysfplugin.git
+    branch = cmake
